# ai-agent-tutorial

./: .gitignore  main.ipynb  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
challenge/: CLAUDE.md
challenge/10/: README.md
challenge/10/story_book_maker/: __init__.py  agent.py  page_compositor.py  prompt.py  state.py
challenge/11/: README.md  main.ipynb
challenge/12/: README.md  main.ipynb
challenge/13/: README.md  smoke_test.py
challenge/13/lexi_app/: app.py  config.py  graph.py  memory.py  nodes.py  schemas.py  service.py  state.py
challenge/14/: README.md  requirements.txt  run.py  smoke_test.py
challenge/14/.streamlit/: config.toml  secrets.toml.example
challenge/14/lexi_app/: __init__.py  app.py  config.py  graph.py  memory.py  nodes.py  service.py  state.py  tools.py
challenge/2/: main.ipynb
challenge/3/: main.ipynb
challenge/4/: chat-gpt-clone-memory-db  main.py
challenge/5/: chat-gpt-clone-memory-db  main.py
challenge/6/: chat-gpt-clone-memory-db  main.py
challenge/8/: README.md  main.py  models.py  requirements.txt  run.py
challenge/8/instruction/: instruction.py
challenge/8/restaurant_bot/: __init__.py  app.py  conversation_flow.py  guardrails.py  handoffs.py  instruction.py  menu_catalog.py  menu_tools.py  models.py  order_tools.py
challenge/8/restaurant_bot/bot_agents/: __init__.py  complaints_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
challenge/9/: main.py  prompt.py
challenge/9/story_book_maker/: __init__.py  agent.py  prompt.py  settings.py  state.py
