[project]
name = "ai-agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain",
    "langchain-google-genai",
    "langgraph",
    "openai>=1.98.0",
    "pydantic",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.48.0",
    "openai-agents[viz]>=0.2.6",
    "google-adk>=1.27.1",
    "google-genai>=1.67.0",
]
